@@ -3,6 +3,7 @@
 -update transform to preserve surface alpha.
 -add vector copy method.
 -revise mixer set_num_channels method.
+-refactor mixer music rewind method.
 
 0.32    2022-04-17
 -add key set_repeat method.
